Add ocean assets hero